Update html <p>. Add resume. Remove dead links

--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
 	</head>
 	<body>
 		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
+    	<ul>
+      	<li><a href="/">Home</a></li>
+      	<li><a href="/files/Luis-Lopez-Resume.pdf">Resume</a></li>
+    	</ul>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Luis Lopez!</h1>
-				<p>I'm a future Software Engineer. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
+    	<div class="blurb">
+      	<h1>Hi there, I'm Luis Lopez!</h1>
+				<p>	I'm a Software Engineer with experience programming Console and Android Applications. 
+					My goal is to be a full-stack engineer, so my front-end experience consists of Android Studio XML
+						and CSS for web design implementation. 
+					For back-end, I'm familiar with relational databases such as PostgreSQL and MySQL 
+						alongside non-relational databases like Firebase and MongoDB.
+					Currently focusing on learning web development so in due time, this website will look much better. 
+				</p>
+    	</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="mailto:ttony678@yahoo.com">email</a></li>
-        		<li><a href="https://github.com/ttony678">github.com/ttony678</a></li>
+    	<ul>
+      	<li><a href="mailto:ttony678@yahoo.com">Email</a></li>
+				<li><a href="https://github.com/ttony678">GitHub</a></li>
+				<li><a href="https://www.linkedin.com/in/luis-lopez-5b9505158/">LinkedIn</a></li>
 			</ul>
 		</footer>
 	</body>
